MA52: Support OBJECT_SHARED, load bundle 'TerraSync-model' delayed, more EDDK objects.